[gd_scene load_steps=9 format=3 uid="uid://bs72ogkvdd7d6"]

[ext_resource type="Script" uid="uid://d1g1p827swfsm" path="res://addons/brackeys-proto-controller-main/proto_controller/proto_controller.gd" id="1_3pa5o"]
[ext_resource type="PackedScene" uid="uid://cw71pwqj275sv" path="res://Assets/Models/Player/exported-model.glb" id="2_2o2of"]
[ext_resource type="Script" uid="uid://bf80l5svttgpn" path="res://addons/brackeys-proto-controller-main/proto_controller/door_ray_cast_3d.gd" id="2_hniue"]
[ext_resource type="Texture2D" uid="uid://bycf5jw2uysik" path="res://Assets/Textures/crosshair.png" id="2_kescs"]
[ext_resource type="Script" uid="uid://brilyuyny22n7" path="res://Scripts/Cameras/CameraTag.gd" id="3_vc7vo"]
[ext_resource type="PackedScene" uid="uid://iavdsh25khu6" path="res://Scenes/SFIT/dust_shader.tscn" id="5_0gfhr"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_iof21"]
radius = 0.4
height = 1.8

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_3pa5o"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:rotation")
properties/1/spawn = true
properties/1/replication_mode = 1

[node name="ProtoController" type="CharacterBody3D"]
editor_description = "IN 2ND LAYER OF COLLISION AND COLLIDES WITH OBJECTS IN LAYER 1,2"
collision_layer = 2
collision_mask = 3
script = ExtResource("1_3pa5o")
base_speed = 10.0
jump_velocity = 8.0
input_left = "left"
input_right = "right"
input_forward = "up"
input_back = "down"

[node name="Model" parent="." instance=ExtResource("2_2o2of")]
transform = Transform3D(1, 0, 0, 0, 1.241, 0, 0, 0, 1, 0, 0, 0.028499186)

[node name="Head" type="Node3D" parent="Model"]
transform = Transform3D(1, 0, 0, 0, 0.80580175, 0, 0, 0, 1, -4.3032573e-09, 1.3950748, 0.028499186)

[node name="Headlight" type="SpotLight3D" parent="Model/Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.009682775, 0.52165854)
light_energy = 3.0
shadow_enabled = true
distance_fade_enabled = true
distance_fade_begin = 10.0
distance_fade_shadow = 12.0
distance_fade_length = 15.0
spot_range = 5.3298745
spot_attenuation = 0.9
spot_angle = 33.75
spot_angle_attenuation = 1.1095694

[node name="Camera3D" type="Camera3D" parent="Model/Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.14544654, 0.019523233)
script = ExtResource("3_vc7vo")

[node name="DoorRayCast3D" type="RayCast3D" parent="Model/Head/Camera3D"]
transform = Transform3D(1.452, 0, 0, 0, -6.346894e-08, -1.452, 0, 1.452, -6.346894e-08, 0, 0, 0)
script = ExtResource("2_hniue")

[node name="Collider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
shape = SubResource("CapsuleShape3D_iof21")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_3pa5o")

[node name="StairsAheadRayCast3D" type="RayCast3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6, -0.7)
target_position = Vector3(0, -0.55, 0)

[node name="StairsBelowRayCast3D" type="RayCast3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -5.96046e-08, 0)
target_position = Vector3(0, -0.75, 0)

[node name="Crosshair" type="Sprite2D" parent="."]
position = Vector2(960, 545)
texture = ExtResource("2_kescs")

[node name="HUD" type="CanvasLayer" parent="."]

[node name="CrossHair" type="TextureRect" parent="HUD"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="DustShader" parent="." instance=ExtResource("5_0gfhr")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.0546782, 0)

[node name="GPUParticles3D" parent="DustShader" index="0"]
emitting = false
amount = 1400
lifetime = 2.0

[editable path="DustShader"]
